--- a/api/config/packages/api_platform.yaml
+++ b/api/config/packages/api_platform.yaml
@@ -9,3 +9,7 @@ api_platform:
         stateless: true
         cache_headers:
             vary: ['Content-Type', 'Authorization', 'Origin']
+    mapping:
+        paths:
+            - '%kernel.project_dir%/src/Http/api_resources' # yaml or xml directory configuration
+            - '%kernel.project_dir%/src/Entity' # default configuration for attributes
